# static-analyzer-factory

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
crates/saf-analysis/: Cargo.toml
crates/saf-analysis/proptest-regressions/: proptest_tests.txt
crates/saf-analysis/src/: callgraph.rs  cfg.rs  cg_refinement.rs  cha.rs  defuse.rs  display.rs  error.rs  export.rs  export_html_template.html  graph_algo.rs  guard.rs  icfg.rs  invalidation.rs  lib.rs  module_index.rs  pass.rs  pipeline.rs  points_to_query.rs  proptest_arb.rs  proptest_tests.rs  session.rs  summary_gen.rs  timer.rs
crates/saf-analysis/src/absint/: checker.rs  config.rs  domain.rs  escape.rs  export.rs  fixpoint.rs  function_properties.rs  generic_fixpoint.rs  interprocedural.rs  interval.rs  mod.rs  nullness.rs  numeric_z3.rs  partition.rs  pta_integration.rs  result.rs  sccp.rs  state.rs  threshold.rs  transfer.rs  transfer_fn.rs
crates/saf-analysis/src/cegar/: abstraction.rs  counterexample.rs  mod.rs
crates/saf-analysis/src/checkers/: finding.rs  mod.rs  pathsens.rs  pathsens_runner.rs  resource_table.rs  runner.rs  site_classifier.rs  solver.rs  spec.rs  summary.rs  z3solver.rs
crates/saf-analysis/src/combined/: mod.rs
crates/saf-analysis/src/cspta/: context.rs  export.rs  mod.rs  solver.rs
crates/saf-analysis/src/database/: catalog.rs  config.rs  handler.rs  mod.rs  protocol.rs
crates/saf-analysis/src/dda/: mod.rs  solver.rs  types.rs
crates/saf-analysis/src/fspta/: builder.rs  export.rs  mod.rs  solver.rs  strong_update.rs  version_table.rs
crates/saf-analysis/src/ifds/: config.rs  edge_fn.rs  export.rs  icfg_index.rs  ide_problem.rs  ide_result.rs  ide_solver.rs  lattice.rs  mod.rs  problem.rs  result.rs  solver.rs  taint.rs  taint_z3.rs  typestate.rs  typestate_z3.rs
crates/saf-analysis/src/invariants/: checker.rs  mod.rs  templates.rs
crates/saf-analysis/src/mssa/: access.rs  builder.rs  export.rs  mod.rs  modref.rs  walker.rs
crates/saf-analysis/src/mta/: discovery.rs  export.rs  lockset.rs  mhp.rs  mod.rs  types.rs
crates/saf-analysis/src/passes/: defuse_pass.rs  mod.rs  pta_pass.rs  valueflow_pass.rs
crates/saf-analysis/src/pta/: clustering.rs  config.rs  constraint.rs  constraint_index.rs  context.rs  export.rs  extract.rs  func_location.rs  hvn.rs  incremental.rs  location.rs  mod.rs  mod_ref.rs  module_constraints.rs  multiplicity.rs  path_sensitive.rs  result.rs  solver.rs  solver_repr_tests.rs  solver_stats.rs  spec_constraints.rs  steensgaard.rs  summary_constraints.rs  value_origin.rs  z3_index.rs
crates/saf-analysis/src/selector/: mod.rs  resolve.rs  sanitizers.rs  sinks.rs  sources.rs  spec_selectors.rs
crates/saf-analysis/src/svfg/: builder.rs  context.rs  export.rs  mod.rs  optimize.rs  program_point.rs  query.rs
crates/saf-analysis/src/valueflow/: builder.rs  config.rs  edge.rs  export.rs  finding.rs  mod.rs  node.rs  query.rs  taint_z3.rs  trace.rs
crates/saf-analysis/src/z3_utils/: alias.rs  assertions.rs  condition_prover.rs  dominator.rs  interprocedural.rs  mod.rs  reachability.rs  solver.rs
crates/saf-analysis/tests/: absint_e2e.rs  absint_verification_e2e.rs  air_dump_e2e.rs  air_json_pipeline.rs  cg_refinement_e2e.rs  checker_e2e.rs  combined_e2e.rs  constant_gep_e2e.rs  cspta_e2e.rs  database_e2e.rs  dda_e2e.rs  debug_local_vars_e2e.rs  fspta_e2e.rs  graph_integration.rs  ifds_e2e.rs  ifds_verification_e2e.rs  incremental_e2e.rs  integer_info_e2e.rs  joint_feasibility_e2e.rs  memory_e2e.rs  mssa_e2e.rs  mssa_verification_e2e.rs  mta_e2e.rs  multi_module_e2e.rs  must_alias_soundness_e2e.rs  oop_e2e.rs  pathsens_e2e.rs  pta_integration.rs  pta_verification_e2e.rs  pts_repr_e2e.rs  rust_std_command_e2e.rs  smoke.rs  span_e2e.rs  svfg_e2e.rs  taint_e2e.rs  typestate_e2e.rs  valueflow_integration.rs  z3_enhanced_e2e.rs
crates/saf-analysis/tests/snapshots/: graph_integration__callgraph_calls.snap  graph_integration__cfg_test_branch.snap  graph_integration__defuse_control_flow.snap  graph_integration__icfg_calls.snap
crates/saf-bench/: Cargo.toml
crates/saf-bench/src/: combined_pta.rs  cruxbc.rs  incremental.rs  juliet.rs  lib.rs  main.rs  oracle.rs  ptaben.rs  report.rs  runner.rs
crates/saf-bench/src/svcomp/: fast_paths.rs  mod.rs  property.rs  scoring.rs  summaries.rs  task.rs  witness.rs
crates/saf-cli/: Cargo.toml
crates/saf-cli/src/: bench_types.rs  commands.rs  driver.rs  help.rs  lib.rs  main.rs
crates/saf-cli/tests/: smoke.rs
crates/saf-core/: Cargo.toml
crates/saf-core/src/: air.rs  air_visitor.rs  cache.rs  config.rs  error.rs  id.rs  ids.rs  layout.rs  lib.rs  manifest.rs  program.rs  span.rs  summary.rs  summary_registry.rs
crates/saf-core/src/logging/: mod.rs  (+3 more)
crates/saf-core/tests/: program.rs  smoke.rs
crates/saf-datalog/: Cargo.toml
crates/saf-datalog/src/: facts.rs  lib.rs
crates/saf-datalog/tests/: fact_extraction_test.rs  hvn_test.rs  pta_basic_test.rs  pts_lattice_test.rs  scc_test.rs
crates/saf-frontends/: Cargo.toml
crates/saf-frontends/src/: air_json.rs  air_json_schema.rs  api.rs  error.rs  lib.rs
crates/saf-frontends/tests/: air_json_frontend.rs  llvm22_syntax_e2e.rs  multi_file.rs  rust_std_command_frontend.rs  smoke.rs
crates/saf-python/: Cargo.toml
crates/saf-python/src/: absint.rs  air.rs  cg_refinement.rs  checkers.rs  combined.rs  cspta.rs  dda.rs  display.rs  exceptions.rs  finding.rs  fspta.rs  graphs.rs  helpers.rs  id_parse.rs  ide.rs  ifds.rs  lib.rs  mssa.rs  project.rs  pta.rs  query.rs  schema.rs  selector.rs  spec.rs  svfg.rs  z3_refine.rs
crates/saf-python/tests/: smoke.rs
crates/saf-test-utils/: Cargo.toml
crates/saf-test-utils/src/: lib.rs
crates/saf-trace/: Cargo.toml  traces.toml
crates/saf-trace/src/: main.rs
crates/saf-wasm/: Cargo.toml
crates/saf-wasm/src/: lib.rs
crates/saf-wasm/tests/: smoke.rs
experiments/livesaferust/syn-sidecar/: Cargo.toml  README.md
(+1231 files in other folders)
