[package]
name = "saf-bench"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Benchmark suite runner for SAF against PTABen and other test suites"

[[bin]]
name = "saf-bench"
path = "src/main.rs"

[dependencies]
saf-core = { workspace = true, features = ["logging-subscriber"] }
saf-frontends = { workspace = true, features = ["llvm-18"] }
saf-analysis = { workspace = true, features = ["z3-solver", "analysis-mta"] }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
saf-cli = { path = "../saf-cli" }
rayon = "1.10"
walkdir = "2"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"

[features]
