[package]
name = "saf-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI binary for the Static Analyzer Factory"

[lib]
name = "saf_cli"
path = "src/lib.rs"

[[bin]]
name = "saf"
path = "src/main.rs"

[dependencies]
saf-core = { workspace = true, features = ["logging-subscriber"] }
saf-frontends = { workspace = true, features = ["llvm-18"] }
saf-analysis = { workspace = true, features = ["z3-solver", "analysis-mta"] }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
glob = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
