[package]
name = "saf-datalog"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Datalog-based analysis engine for SAF using Ascent"
publish = false

[dependencies]
saf-core = { workspace = true }
saf-analysis = { workspace = true }
ascent = { version = "0.8", default-features = false }
tracing = { workspace = true }
rustc-hash = { workspace = true }
fixedbitset = "0.5"

[dev-dependencies]
saf-test-utils = { path = "../saf-test-utils", default-features = false }
# saf-frontends inherits default-features = false from workspace; LLVM feature
# comes via saf-datalog's own `llvm-*` passthrough features.
saf-frontends = { workspace = true }

[features]
default = ["llvm-18"]
parallel = ["ascent/par"]
wasm = ["ascent/wasm-bindgen"]
# LLVM version selection for dev-dependencies:
llvm-18 = ["saf-frontends/llvm-18", "saf-test-utils/llvm-18"]
llvm-22 = ["saf-frontends/llvm-22", "saf-test-utils/llvm-22"]
