[package]
name = "saf-test-utils"
version = "0.1.0"
edition = "2024"
description = "Test utilities for SAF crates"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = ["llvm-18"]
llvm-18 = ["saf-frontends/llvm-18"]
llvm-22 = ["saf-frontends/llvm-22"]

[dependencies]
saf-core = { path = "../saf-core" }
saf-frontends = { path = "../saf-frontends", default-features = false }
