[package]
name = "saf-trace"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Algorithm trace generator for interactive tutorial animations"

[[bin]]
name = "saf-trace"
path = "src/main.rs"

[features]
default = ["llvm-18"]
llvm-18 = ["saf-frontends/llvm-18"]
llvm-22 = ["saf-frontends/llvm-22"]

[dependencies]
saf-core = { workspace = true, features = ["logging-subscriber"] }
saf-frontends = { workspace = true }
saf-analysis = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
